# scholia

./: .gitignore  LICENSE  MANIFEST.in  PACKAGING.md  README.md  _pyinstaller_entry.py  build.ps1  pyproject.toml  scholia.spec
.github/workflows/: ci.yml
browser-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  selectors.js
browser-extension/mock/: word-online-mock.html
installer/: install_scholia.ps1
launchers/: Scholia - App.bat  Scholia - Start Bridge (Word Addin).bat  Scholia - Trust Certificate (one time).bat  Scholia.bat
src/scholia/: __init__.py  __main__.py  app.py  cli.py  corpus.py  discovery.py  embedders.py  entailment.py  grounding.py  index.py  llm.py  mirror.py  models.py  overlay.py  rerank.py  retrieval.py  server.py  writing_partner.py
tests/: test_app.py  test_cli.py  test_cli_discover.py  test_cli_mirror.py  test_cli_rerank.py  test_cli_suggest.py  test_cli_verify.py  test_corpus.py  test_discovery.py  test_embedders.py  test_entailment.py  test_grounding.py  test_index.py  test_integration_discovery.py  test_integration_entailment.py  test_integration_llm.py  test_integration_mirror.py  test_integration_real_model.py  test_integration_reranker.py  test_llm.py  test_mirror.py  test_models.py  test_overlay.py  test_rerank.py  test_retrieval.py  test_retrieve_reranked.py  test_server.py  test_server_addin.py  test_smoke.py  test_writing_partner.py
tests/fixtures/: sample_note.md
tests/fixtures/corpus/: paperA.md  paperB.md  paperC.md  paperD_malformed.md
word-addin/: SIDELOAD_WORD.md  commands.html  commands.js  manifest.xml  taskpane.css  taskpane.html  taskpane.js
