[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scholia"
version = "0.2.0"
description = "Local citation/grounding engine over a Zotero literature mirror."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    # Provides BOTH the bi-encoder (SentenceTransformer) and the cross-encoder
    # re-ranker (CrossEncoder). Apache-2.0. The default reranker model
    # cross-encoder/ms-marco-MiniLM-L-6-v2 and the optional BAAI/bge-reranker-v2-m3
    # are both Apache-2.0; downloaded once on first use (local CPU, no cloud).
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "pyyaml>=6.0",
    "click>=8.1",
    "numpy>=1.26",
    # Required by nomic-embed-text-v1.5's trust_remote_code modeling code;
    # without it the production-default NomicEmbedder fails with ImportError.
    "einops>=0.7",
    # Required by generate_localhost_cert() for --serve-addin / --https / trust-cert.
    # Uses only stdlib-safe, cross-platform RSA + X.509 primitives; no system libs.
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
overlay = ["PySide6>=6.5", "pynput>=1.7"]
# Cloud writing-partner backend ONLY. NOT a core dependency: the local + fake
# LLM backends need no SDK. `anthropic` is MIT-licensed; it is imported lazily
# inside CloudClaudeLLM.complete(), and the cloud path is opt-in/off (gated at
# the CLI behind --allow-cloud), because it sends the user's prose to Anthropic.
cloud = ["anthropic>=0.39"]

[project.scripts]
scholia = "scholia.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that download/run the real embedding model (deselected by default)",
]
addopts = "-m 'not integration'"
